# arrow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  arrow.toml  demo_comparison.py  demo_part2.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: arrow_benchmark_and_fix.md  arrow_vs_traditional_test_spec.md  bench.py  bench_comparison.py  comparison_results.json
benchmarks/reports/run-2026-03-20/: summary.md
benchmarks/reports/run-2026-03-20T1448/: 01-docker-setup.md  02-ci-pipeline.md  03-hybrid-search-e2e.md  04-error-handling.md  05-configuration.md  06-multi-project.md  07-frecency.md  08-rrf-scoring.md  09-exception-logging.md  10-env-var-reads.md  11-estimate-budget.md  12-all-classes.md  13-search-methods.md  14-storage-impact.md  15-chunker-impact.md  16-storage-imports.md  17-search-deps.md  18-search-tests.md  19-auth-tests.md  20-search-diff.md  21-resolve-storage.md  22-resolve-search.md  23-server-summary.md  24-storage-summary.md  25-project-overview.md  26-dead-code.md  27-embedding-model.md  28-docker-healthcheck.md  29-hash-algorithm.md  30-mcp-tools.md  summary.md
benchmarks/reports/run-2026-03-20T1510/: 01-incremental-indexing.md  02-chunker-nesting.md  03-hybrid-search-e2e.md  04-error-handling.md  05-configuration.md  06-multi-project.md  07-frecency.md  08-rrf-scoring.md  09-exception-logging.md  10-env-var-reads.md  11-estimate-budget.md  12-all-classes.md  13-search-methods.md  14-storage-impact.md  15-chunker-impact.md  16-storage-imports.md  17-search-deps.md  18-search-tests.md  19-auth-tests.md  20-search-diff.md  21-resolve-storage.md  22-resolve-search.md  (+9 more)
src/arrow/: __init__.py  __main__.py  chunker.py  cli.py  config.py  discovery.py  embedder.py  git_utils.py  hasher.py  indexer.py  search.py  server.py  storage.py  tools_analysis.py  tools_data.py  tools_github.py  vector_store.py  watcher.py
tests/: conftest.py  test_analytics.py  test_auto_warm.py  test_budget.py  test_compaction.py  test_conversation.py  test_core.py  test_dead_code.py  test_debug_chunker.py  test_diff_context.py  test_doc_search.py  test_edge_cases.py  test_export_import.py  test_frecency.py  test_git_utils.py  test_impact_analysis.py  test_imports.py  test_memory.py  test_new_features.py  test_noncode_chunking.py  test_precision.py  test_search_regex.py  test_server.py  test_stale_index.py  test_storage_methods.py  test_symbol_resolution.py  test_test_mapping.py  test_tool_chain.py  test_vector_store.py  test_watcher.py
(+62 files in other folders)
