[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arrow-mcp"
version = "0.1.0"
description = "A local, high-performance MCP server that gives Claude Code the same indexing, caching and context management as Cursor IDE."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andreas" },
]
keywords = ["mcp", "claude", "code-indexing", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "tree-sitter>=0.21.0,<0.23",
    "tree-sitter-languages>=1.10.0,<2.0",
    "xxhash>=3.4.0",
    "tiktoken>=0.7.0",
    "zstandard>=0.22.0",
]

[project.scripts]
arrow = "arrow.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arrow"]
